[package]
name = "zinc_cube"
version = "0.1.0"
authors = ["James Waples <jamwaffles@gmail.com>"]

[dependencies]
rust-libcore = "*"

[dependencies.zinc]
# git = "https://github.com/hackndev/zinc"
path = "../zinc"
features = [ "mcu_tiva_c" ]

[dependencies.macro_platformtree]
# git = "https://github.com/hackndev/zinc"
# path = "/macro_platformtree"
path = "../zinc/macro_platformtree"

[dependencies.ioreg]
# git = "https://github.com/hackndev/zinc"
# path = "/ioreg"
path = "../zinc/ioreg"

[dependencies.platformtree]
# git = "https://github.com/hackndev/zinc"
# path = "/platformtree"
path = "../zinc/platformtree"
